--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "once-esm": "file:",
     "wrappy": "^1.0.2"
+  },
+  "devDependencies": {
+    "vitest": "^3.0.4"
   }
 }
